<resources>
<string name="yes">"Yes"</string>
<string name="no">"No"</string>
<string name="ok">"Ok"</string>
<string name="cancel">"Cancel"</string>
<string name="review">"Review"</string>
<string name="send">"Send"</string>
<string name="settings_menu_about">"About"</string>
<string name="settings_menu_configuration">"Settings"</string>
<string name="settings_menu_licence">"License"</string>
<string name="dialog_title_delete_surveys">"Are you sure that you want to remove all sent surveys?"</string>
<string name="dialog_title_delete_survey">"Delete Survey"</string>
<string name="dialog_info_delete_survey">"Are you sure you want to completely delete this survey?"</string>
<string name="dialog_title_error">"Error"</string>
<string name="create_info_organization_unit">"Organization Unit"</string>
<string name="assessment_sent_date">"Date"</string>
<string name="assessment_title_header">"Pending Send"</string>
<string name="assessment_sent_title_header">"Sent Surveys"</string>
<string name="assessment_title_info">"Info"</string>
<string name="survey_info_exit">"Are you sure you want to exit?"</string>
<string name="survey_info_exit_delete">"The survey in progress will be deleted"</string>
<string name="survey_title_completed">"Survey completed"</string>
<string name="survey_info_completed">"The survey has been successfully completed"</string>
<string name="exception_org_unit_not_valid">"Outlet Code is not valid. Contact PSK at 011 771 811"</string>
<string name="exception_org_unit_banned">"Outlet is closed or blocked. Contact PSI at 011 771 811"</string>
<string name="dynamic_error_phone_format">"Invalid format for phone number ( 0NN NNN NNN{N} )"</string>
<string name="dynamic_error_age">"Invalid age"</string>
<string name="title_activity_settings">"Settings"</string>
<string name="settings_checkbox_customize_fonts">"Customize fonts?"</string>
<string name="settings_list_font_sizes">"Fonts size"</string>
<string name="settings_text_dhis_server_url">"DHIS Server URL"</string>
<string name="pref_header_general">"General"</string>
<string name="font_size_level0">"xsmall"</string>
<string name="font_size_level1">"small"</string>
<string name="font_size_level2">"medium"</string>
<string name="font_size_level3">"large"</string>
<string name="font_size_level4">"xlarge"</string>
<string name="dialog_title_push">"Pushing data"</string>
<string name="dialog_title_push_response">"Push response"</string>
<string name="dialog_info_push_ok">"Survey data pushed to server. Results:"</string>
<string name="dialog_info_push_bad_credentials">"Bad credentials for pushing"</string>
<string name="dialog_error_push_no_uid">"No program UID found in server for code "</string>
<string name="dialog_error_push_no_location">"No location available"</string>
<string name="pref_server">"Server"</string>
<string name="pref_visual">"Visual"</string>
<string name="number_0">"0"</string>
<string name="number_1">"1"</string>
<string name="number_2">"2"</string>
<string name="number_3">"3"</string>
<string name="number_4">"4"</string>
<string name="number_5">"5"</string>
<string name="number_6">"6"</string>
<string name="number_7">"7"</string>
<string name="number_8">"8"</string>
<string name="number_9">"9"</string>
<string name="assessment_title_rdt">"RDT"</string>
<string name="progress_pull_downloading">"Refreshing metadata (this might take a few minutes) "</string>
<string name="progress_pull_preparing_orgs">"Loading organisations ..."</string>
<string name="progress_pull_surveys">"Loading surveys ..."</string>
<string name="progress_pull_connecting">"Connecting to DHIS server ..."</string>
<string name="progress_pull_done">"Done"</string>
<string name="progress_push_no_survey">"No survey found for pushing"</string>
<string name="progress_push_posting_survey">"Pushing survey data to server ..."</string>
<string name="progress_push_preparing_survey">"Preparing survey for pushing ..."</string>
<string name="progress_push_updating_survey">"Updating pushed survey data ..."</string>
<string name="cancellingPull">"The process will be stopped in a few seconds"</string>
<string name="dialog_title_pull_response">"Pull status"</string>
<string name="dialog_pull_success">"Dhis metadata successfully pulled from server"</string>
<string name="dialog_push_before_pull_success">"Surveys successfully pushed to dhis server, starting to pull metadata"</string>
<string name="dialog_push_success">"Survey successfully pushed to dhis server"</string>
<string name="dialog_pull_error">"Error while trying to pull metadata from dhis server"</string>
<string name="create_info_zone">"Zone"</string>
<string name="dhis_url_error">"DHIS URL Error"</string>
<string name="dhis_url_error_bad_version">"Dhis server not compatible (only 2.20, 2.21, 2.22 allowed)"</string>
<string name="dhis_url_error_bad_credentials">"This app is not authorized in the given server"</string>
<string name="settings_menu_monitoring">"Monitor"</string>
<string name="monitor_label">"Please, select a time period"</string>
<string name="monitor_label_option_months">"Last 6 months"</string>
<string name="monitor_label_option_days">"Last 6 days"</string>
<string name="monitor_label_option_weeks">"Last 6 weeks"</string>
<string name="monitor_table_title_suspected">"Suspected and Positive cases"</string>
<string name="monitor_table_title_stock">"Stock Consumption"</string>
<string name="monitor_row_title_period">"Period"</string>
<string name="monitor_row_title_week">"Week"</string>
<string name="monitor_row_title_suspected">"Suspected cases"</string>
<string name="monitor_row_title_positive">"Positive"</string>
<string name="monitor_row_title_negative">"Negative"</string>
<string name="monitor_row_title_not_tested">"Not tested"</string>
<string name="monitor_row_title_referral">"Referral"</string>
<string name="monitor_row_title_asmq">"AS/MQ"</string>
<string name="monitor_row_title_rdts">"RDTs"</string>
<string name="monitor_row_title_positivity_rate">"Positivity rate"</string>
<string name="pf">"Pf"</string>
<string name="pv">"Pv"</string>
<string name="pfpv">"Pf/Pv"</string>
<string name="settings_menu_legal">"Legal"</string>
<string name="settings_menu_copyright">"Copyright"</string>
<string name="settings_menu_licenses">"Software licenses"</string>
<string name="settings_menu_eula">"EULA"</string>
<string name="monitor_row_title_day">"Day"</string>
<string name="monitor_row_title_month">"Month"</string>
<string name="unrecognized_option">"Unrecognized"</string>
<string name="progress_pull_building_survey">"Building survey ..."</string>
<string name="progress_pull_building_value">"Building values ..."</string>
<string name="monitor_row_title_dhapip">"DHA-PIP"</string>
<string name="number_10">"10"</string>
<string name="number_11">"11"</string>
<string name="number_12">"12"</string>
<string name="unsent_button">"Unsent"</string>
<string name="sent_button">"Sent"</string>
<string name="monitor_button">"Monitoring"</string>
<string name="app_name">"Malaria Case Surveillance"</string>
<string name="font_size_level0_title">"Extra small"</string>
<string name="font_size_level1_title">"Small"</string>
<string name="font_size_level2_title">"Medium"</string>
<string name="font_size_level3_title">"Large"</string>
<string name="font_size_level4_title">"Extra large"</string>
<string name="toast_push_is_pushing">"Sending surveys before entering settings."</string>
<string name="option_counter">"Repetitions: "</string>
<string name="option_confirm">"Confirm option"</string>
<string name="dhis_url_error_generic">"Dhis server error. The server not responding properly"</string>
<string name="no_data">"no data"</string>
<string name="last_6_days">"last 6 days"</string>
<string name="last_6_weeks">"last 6 weeks"</string>
<string name="last_6_months">"last 6 months"</string>
<string name="download">"Download:"</string>
<string name="settings_select_language">"Language"</string>
<string name="system_defined">"System defined"</string>
<string name="developer_option_summary">"This feature activates the developer options"</string>
<string name="developer_option_title">"Show developer options"</string>
<string name="export_data_option_title">"Export database"</string>
<string name="malaria_case_based_reporting">"Malaria Case Surveillance"</string>
<string name="survey_review">"Review"</string>
<string name="survey_send">"Send"</string>
<string name="app_about">"About"</string>
<string name="survey_completed">"Survey completed"</string>
<string name="survey_completed_text">"The survey has been successfully completed"</string>
<string name="app_settings">"Settings"</string>
<string name="fonts_customise">"Customize fonts?"</string>
<string name="font_size">"Fonts size"</string>
<string name="server_name">"DHIS Server URL"</string>
<string name="server">"Server"</string>
<string name="app_visual">"Visual"</string>
<string name="monitoring_title_dropdown">"Please, select a time period"</string>
<string name="monitoring_title">"MONITORING"</string>
<string name="monitoring_label_option_months">"Last 6 months"</string>
<string name="monitoring_label_option_days">"Last 6 days"</string>
<string name="monitoring_label_option_weeks">"Last 6 weeks"</string>
<string name="monitoring_case_stats">"Suspected and Positive cases"</string>
<string name="consumption">"Stock Consumption"</string>
<string name="monitoring_row_title_week">"Week"</string>
<string name="RDT">"RDTs"</string>
<string name="rdt_pf">"Pf"</string>
<string name="rdt_pv">"Pv"</string>
<string name="rdt_mixed">"Mixed"</string>
<string name="app_legal">"Legal"</string>
<string name="app_copyright">"Copyright"</string>
<string name="app_software_licenses">"Software licenses"</string>
<string name="app_EULA">"EULA"</string>
<string name="monitoring_row_title_day">"Day"</string>
<string name="unsent_data">"Unsent"</string>
<string name="sent_data">"Sent"</string>
<string name="font_extra_small">"Extra small"</string>
<string name="font_small">"Small"</string>
<string name="font_medium">"Medium"</string>
<string name="font_large">"Large"</string>
<string name="font_extra_large">"Extra large"</string>
<string name="negative">"Negative"</string>
<string name="positivity_rate">"Positivity rate"</string>
<string name="Pf">"Pf"</string>
<string name="Pv">"Pv"</string>
<string name="mixed">"Pf/Pv"</string>
<string name="dynamic_error_number">"Invalid Number"</string>
<string name="settings_menu_logout_message">"Changing the server or orgunit needs to re-login. Every not-sent survey will be deleted. Are you sure you want to continue?"</string>
<string name="app_logout">"Logout"</string>
<string name="network_error">"There is a problem with the network, please try again later."</string>
<string name="login_invalid_credentials">"Invalid credentials"</string>
<string name="login_invalid_server_url">"Invalid Server URL"</string>
<string name="error_conflict_message">"The event with UID: %1$s. was uploaded with conflict in the data element UID: %2$s with the message: %3$s. Please contact the administrator."</string>
<string name="error_conflict_title">"Error"</string>
<string name="confirmation_really_exit_title">"Really Exit?"</string>
<string name="confirmation_really_exit">"Are you sure you want to exit the app?"</string>
<string name="survey_first_step">"Retrieving questions..."</string>
<string name="survey_second_step">"Building questions..."</string>
<string name="survey_third_step">"Building questions tree..."</string>
<string name="survey_fourth_step">"Creating screens..."</string>
<string name="dynamic_error_pregnant_month">"Invalid pregnant month"</string>
<string name="admin_announcement">"Administrator announcement"</string>
<string name="user_close">"This user was closed by de administrator."</string>
<string name="run_in_demo_mode">"Run in demo mode"</string>
<string name="login_error_json">"Error reading json config file. Please contact your administrator."</string>
</resources>