<!--
  ~ Copyright (c) 2015.
  ~
  ~ This file is part of QIS Surveillance App.
  ~
  ~  QIS Surveillance App is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  QIS Surveillance App is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with QIS Surveillance App.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/app_settings" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="102"
        android:title="@string/app_about" />
    <item
        android:orderInCategory="103"
        android:title="@string/app_legal">
        <menu>
            <item
                android:id="@+id/action_copyright"
                android:orderInCategory="103"
                android:title="@string/app_copyright" />
            <item
                android:id="@+id/action_licenses"
                android:orderInCategory="104"
                android:title="@string/app_software_licenses" />
            <item
                android:id="@+id/action_eula"
                android:orderInCategory="105"
                android:title="@string/app_EULA" />
        </menu>
    </item>
    <item
        android:id="@+id/export_db"
        android:orderInCategory="106"
        android:title="@string/export_data_option_title" />
    <item
        android:id="@+id/demo_mode"
        android:orderInCategory="107"
        android:title="@string/run_in_demo_mode" />
</menu>
